MDEV-9842 LOAD DATA INFILE does not work well with a TEXT column when using sjis